# AIE7_Certification_Challenge

./: .gitignore  Deliverables.md  pyproject.toml
data/: Error_Fetching_Product_product_summary.txt
evaluation/: Ragas_Evaluation.ipynb
rag_data_generation/: RAG_DOCUMENT_GENERATOR_README.md  generate_rag_data.ipynb
src/: QUICK_START.md  README.md  __init__.py  start_dev.sh  start_dev_manual.sh  test.ipynb
src/api/: app.py
src/frontend/: README.md  package-lock.json  package.json
src/frontend/.next/: app-build-manifest.json  trace
src/frontend/.next/server/: _error.js  app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
src/frontend/.next/server/app/: page.js  page_client-reference-manifest.js
src/frontend/.next/server/pages/: _error.js
src/frontend/.next/server/vendor-chunks/: @swc.js  asynckit.js  axios.js  call-bind-apply-helpers.js  combined-stream.js  debug.js  delayed-stream.js  dunder-proto.js  es-define-property.js  es-errors.js  es-object-atoms.js  es-set-tostringtag.js  follow-redirects.js  form-data.js  function-bind.js  get-intrinsic.js  get-proto.js  gopd.js  has-flag.js  has-symbols.js  has-tostringtag.js  hasown.js  lucide-react.js  math-intrinsics.js  mime-db.js  mime-types.js  ms.js  next.js  proxy-from-env.js  supports-color.js
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/app/chat/: page.tsx
src/frontend/app/setup/: page.tsx
src/utils/: __init__.py  extraction_tool.py  graph.py  prompts.py  rag_graph.py  rag_tool.py
(+23 files in other folders)
